--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,19 @@
 /* Custom Properties */
 :root {
   /* Colors */
+  --white: #fff;
+  --black: #000;
+  --very-dark-desaturated-blue: hsl(238, 29%, 16%);
+  --soft-red: hsl(14, 88%, 65%);
+  --soft-violet: hsl(273, 75%, 66%);
+  --soft-blue: hsl(240, 73%, 65%);
+  --very-dark-grayish-blue: hsl(237, 12%, 33%);
+  --dark-grayish-blue: hsl(240, 6%, 50%);
+  --light-grayish-blue: hsl(240, 5%, 91%);
+  --body-bg: linear-gradient(to bottom, var(--soft-violet), var(--soft-blue));
 
   /* Fonts */
+  --font-body: 'Kumbh Sans', sans-serif;
 }
 
 /***********************************/
@@ -21,6 +32,13 @@ html {
 }
 
 body {
+  font-family: var(--font-body);
+  font-weight: 400;
+  line-height: 1.8rem;
+  font-size: 1.2rem;
+  background-image: var(--body-bg);
+  min-height: 100vh;
+  background-repeat: no-repeat;
 }
 
 img {
@@ -43,6 +61,116 @@ img {
 /***********************************/
 /* Main Layout */
 
+/* Container */
+.container {
+  padding: 15rem 2.4rem 8.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Card */
+.card {
+  background-color: var(--white);
+  border-radius: 2.3rem;
+  box-shadow: 0 5rem 5rem rgba(53, 18, 122, 0.5);
+  position: relative;
+  max-width: 40rem;
+}
+
+.card-img-mobile {
+  position: absolute;
+  width: 100%;
+  transform: translateY(-58%);
+  text-align: center;
+}
+
+.card-img-desktop {
+  display: none;
+}
+
+.card-img-mobile .women-illustration {
+  width: 23.6rem;
+}
+
+.mobile-bg {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 11rem);
+  width: 23.6rem;
+}
+
+.card-body {
+  padding: 13.2rem 2.4rem 4.8rem;
+}
+
+.card-title {
+  color: var(--very-dark-desaturated-blue);
+  font-size: 3.2rem;
+  line-height: auto;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+/* Accordion */
+.accordion {
+}
+
+.accordion-item {
+  border-bottom: solid 1px var(--light-grayish-blue);
+}
+
+.accordion-head {
+  color: var(--very-dark-grayish-blue);
+  font-family: inherit;
+  font-size: 1.3rem;
+  background-color: transparent;
+  border: none;
+  font-weight: inherit;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding-top: 1.8rem;
+  padding-bottom: 1.8rem;
+}
+
+.accordion-head::after {
+  content: '';
+  display: inline-block;
+  width: 0.8rem;
+  height: 0.8rem;
+  background-image: url('./../images/icon-arrow-down.svg');
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: all 0.3s ease;
+}
+
+.accordion-body {
+  color: var(--dark-grayish-blue);
+  padding-bottom: 1.3rem;
+}
+
+.accordion-body-wrapper {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.4s ease;
+}
+
+.accordion-item.active .accordion-head {
+  font-weight: 700;
+  color: var(--very-dark-desaturated-blue);
+}
+
+.accordion-item.active .accordion-head::after {
+  transform: rotate(180deg);
+}
+
 /***********************************/
 /* Util Classes */
 
@@ -64,6 +192,62 @@ img {
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  .container {
+    display: block;
+    padding-left: 28rem;
+    padding-top: 13rem;
+  }
+
+  .card {
+    max-width: 92rem;
+    display: flex;
+    height: 51rem;
+  }
+
+  .card > * {
+    flex: 1;
+  }
+
+  .accordion-head {
+    font-size: 1.4rem;
+  }
+
+  .card-title {
+    text-align: left;
+  }
+
+  .card-img-mobile {
+    display: none;
+  }
+
+  .card-body {
+    padding-top: 7.5rem;
+    padding-left: 0.8rem;
+  }
+
+  .card-img-desktop {
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
+  .desktop-box {
+    position: absolute;
+    width: 18rem;
+    top: 50%;
+    transform: translate(-50%, -25%);
+  }
+
+  .card-img-desktop .women-illustration {
+    width: 47rem;
+    transform: translate(-8rem, -1rem);
+  }
+
+  .accordion-head {
+    padding-top: 1.8rem;
+    padding-bottom: 1.8rem;
+  }
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
