--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,10 @@ img {
     transform: translate(-8rem, -1rem);
   }
 
+  .accordion {
+    max-width: 35rem;
+  }
+
   .accordion-head {
     padding-top: 1.8rem;
     padding-bottom: 1.8rem;
